
<resources>
    <string name="app_name">D2S</string>
    <string name="search">Поиск</string>
    <string name="search_with_app_name">%1$s/%2$s</string>
    <string name="search_players">Поиск</string>
    <string name="fragment_pro_players">PRO Игроки</string>
    <string name="fragment_ranking">Лидеры</string>
    <string name="fragment_pro_teams">Команды</string>
    <string name="fragment_records">Рекорды</string>
    <string name="search_title">Поиск</string>
    <string name="toolbar_for_ranking">Рейтинг %1$s</string>

    <string name="Europe">Европа</string>
    <string name="Asia">Азия</string>
    <string name="USA">Америка</string>
    <string name="China">Китай</string>
    <string name="unknown">Неизвестно</string>
    <string name="search_result">Результаты поиска</string>

    <string name="tab_matches_player">Матчи</string>
    <string name="win">win</string>
    <string name="lose">lose</string>
    <string name="kda">%1$d/%2$d/%3$d</string>
    <string name="player_rank">Ранг:</string>
    <string name="match_duration">%1$s</string>
    <string name="radiant_score">%1$d</string>
    <string name="dire_score">%1$d</string>
    <string name="exit">Выход</string>
    <string name="file">Файл</string>
    <string name="create_new">Создать новый</string>
    <string name="open">Открыть</string>
    <string name="statistics_player">%1$s [%2$d]</string>
    <string name="match_detail">Матч %1$d</string>
    <string name="default_count">0</string>
    <string name="record">%1d</string>

    <string name="tab_match_detail">Подробнее</string>
    <string name="anonymous">Аноним</string>
    <string name="radiant_victory">Свет победил</string>
    <string name="team_victory">%1s победил</string>
    <string name="dire_victory">Тьма победила</string>
    <string name="game_mode_and_lobby_type">%1$s, %2$s</string>
    <string name="score_and_duration">%1$d   %2$d:%3$d   %4$d</string>
    <string name="level">Уровень героя:</string>
    <string name="default_level">Ур. 1</string>
    <string name="tab_match_detail_radiant">Свет</string>
    <string name="tab_match_detail_dire">Тьма</string>
    <string name="default_kda">0/0/0</string>
    <string name="tab_match_detail_farm">Фарм</string>
    <string name="tab_match_detail_damage">Урон</string>
    <string name="overview">Обзор</string>
    <string name="solo_mmr">%1$d</string>
    <string name="profile_hidden">Этот профиль скрыт</string>
    <string name="radiant">Свет</string>
    <string name="radiant_title_chart">Сил Света</string>
    <string name="dire">Тьма</string>
    <string name="dire_title_chart">Сил Тьмы</string>
    <string name="skip">-</string>
    <string name="gold_per_min">GPM</string>
    <string name="xp_per_min">XPM</string>
    <string name="last_hits">LH</string>
    <string name="denies">DN</string>
    <string name="heal">HEAL</string>
    <string name="hero_damage">TD</string>
    <string name="total_gold">GOLD</string>
    <string name="gold_per_min_value">Золото в минуту:</string>
    <string name="xp_per_min_value">Опыта в минуту:</string>
    <string name="last_hits_value">Добито крипов:</string>
    <string name="denies_value">Не отдано крипов:</string>
    <string name="hero_damage_value">Урон по героям:</string>
    <string name="total_gold_value">Всего золота:</string>
    <string name="damage">DMG</string>
    <string name="nickname">Прозвище</string>
    <string name="no_internet">Нет доступа к Интернету</string>
    <string name="errors_500">Ошибка сервера…</string>
    <string name="errors_400">Ошибка клиента…</string>
    <string name="result_search_query">найдено %1$d совпадений</string>
    <string name="by_query">По запросу:</string>
    <string name="found">\"%1$s\"</string>
    <string name="favorite_players">Избранные игроки:</string>
    <string name="china">Китай</string>
    <string name="americas">Америка</string>
    <string name="se_asia">ЮВ Азия</string>
    <string name="europe">Европа</string>
    <string name="top_100_players">Топ 100 игроков</string>
    <string name="ranking_player_position">%1$d</string>
    <string name="rank_image">Место в рейтинге</string>
    <string name="player">Игрок</string>
    <string name="team">Команда</string>
    <string name="country_flag">Флаг</string>
    <string name="country_title">Страна</string>
    <string name="logo_player_desc">Лого игрока</string>
    <string name="empty_data_by_match">Данные о текущем матче отсутствуют</string>
    <string name="empty_data">Данные отсутствуют</string>
    <string name="game_mod_and_lobby_type">%1s / %2s</string>
    <string name="double_click_to_exit">Нажмите еще раз для выхода</string>
    <string name="player_remove_with_favorite_list">%1$s удален из избранного"</string>

    <string name="duration_title">Длительность</string>
    <string name="last_hits_title">Ластхит</string>
    <string name="gold_per_min_title">GPM</string>
    <string name="xp_per_min_title">XPM</string>
    <string name="date_title">Дата</string>
    <string name="kills_title">Убийств</string>
    <string name="deaths_title">Смертей</string>
    <string name="assists_title">Помощь</string>
    <string name="denies_title">Не отдано крипов</string>
    <string name="hero_damage_title">Урон по героям</string>
    <string name="tower_damage_title">Урон по строениям</string>
    <string name="tower_damage_title_match">Урон по строениям:</string>
    <string name="hero_healing_title">Восстановлено хп</string>
    <string name="hero_healing_title_match">Восстановлено хп:</string>
    <string name="sort_by_date">по дате</string>
    <string name="sort_by_score">по значению</string>
    <string name="games_hero">%1d</string>
    <string name="win_rate_hero">%1d</string>
    <string name="pro_all_matches">%1d</string>
    <string name="matches_with_win">%1$s</string>
    <string name="matches_against_win">%1s%%</string>
    <string name="team_mame">%1s</string>
    <string name="fragment_home">Главная</string>
    <string name="player_image">Фото игрока</string>
    <string name="vector_icon">Векторная иконка Избранные игроки</string>
    <string name="last_match_time_title">Последний матч</string>
    <string name="logo_hero_title">Логотип героя</string>
    <string name="hero_name_title">Герой</string>
    <string name="result_title">Исход</string>
    <string name="kda_title">K/D/A</string>
    <string name="refresh">Повторить попытку</string>
    <string name="star">звезда</string>
    <string name="list_favorite_player_is_empty">Список избранных игроков пуст</string>
    <string name="name_title">Имя</string>
    <string name="games_title">Игр</string>
    <string name="percent_win">% Побед</string>
    <string name="win_with_title">Побед С</string>
    <string name="win_against_title">Побед Против</string>
    <string name="matches">Матчи</string>
    <string name="pro_players">Профессионалы</string>
    <string name="heroes">Герои</string>
    <string name="loading">Загрузка…</string>
    <string name="items_title">Предметы</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="rand_hero">Рандомный герой:</string>
    <string name="trophy_title">Трофей</string>
    <string name="img_hero">Фото героя</string>
    <string name="item">Предмет</string>
    <string name="go_to_player_profile">Перейти в профиль</string>
    <string name="charts">Графики</string>
    <string name="gold_title">Золото</string>
    <string name="total_gold_title">Всего золота</string>
    <string name="exp_title">Опыт</string>
    <string name="removed_from_favorites">Игрок удален из избранного</string>
    <string name="add_to_favorites">Игрок добавлен в избранное</string>
    <string name="not_fully_loaded">Пожалуйста дождитесь полной загрузки профиля игрока</string>
    <string name="no_player_data">Данные об игроке отсутствуют</string>
    <string name="search_by_name_and_team">Поиск по имени или команде</string>
    <string name="search_by_name">Поиск игрока по имени</string>
    <string name="team_search">Поиск команды</string>
    <string name="least_3_characters">Запрос должен состоять минимум из 3 символов</string>
    <string name="favorite">Избранный</string>
    <string name="together">Вместе</string>
    <string name="against">Против</string>
    <string name="wins_title">Побед</string>

    <string name="gold_and_xp_marker">Преимущество %1$s на %2$d минуте составило %3$d</string>
    <string name="no_data_for_chart">Данные для построения графика отсутствуют :(</string>
    <string name="server_not_response">Сервер не отвечает. Пожалуйста, попробуйте позже.</string>
    <string name="no_games_with_pro">Не играл с PRO игроками</string>
    <string name="network_error">Во время загрузки информации произошла сетевая ошибка. Пожалуйста нажмите на кнопку \'Обновить\'. Если ошибка не пропадает, попробуйте позже.</string>
    <string name="player_rank_tier_image">Картинка ранга игрока</string>
    <string name="player_rank_tier_image_star">Картинка звезд ранга</string>
    <string name="wins_loses">Выиграл/Проиграл</string>
    <string name="solo_mmr_title">Соло ММР</string>
    <string name="win_rate">Побед</string>
    <string name="opposing_team_logo">Команда Противника Лого</string>
    <string name="opposing_team_title">Противник</string>
    <string name="current_team">Текущий состав</string>
    <string name="former_players">Бывшие игроки</string>
    <string name="team_logo">Логотип Команды</string>
    <string name="losses_title">Поражений</string>
    <string name="rating_title">Рейтинг</string>

    <string name="only_digital_value">%1$d</string>
    <string name="only_string_value">%1$s</string>
    <string name="no_data_about_the_game">No data about the game</string>
    <string name="logo_img">Логотип</string>
    <string name="first_team_logo_title">Логотип первой команды</string>
    <string name="second_team_logo_title">Логотип второй команды</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="in_team">В команде</string>
</resources>