<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/sort_variant"
        android:title="@string/search_title"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/sort_date_up"
                android:icon="@drawable/sort_ascending"
                android:title="@string/sort_by_date" />
            <item
                android:id="@+id/sort_date_down"
                android:icon="@drawable/sort_descending"
                android:title="@string/sort_by_date" />
            <item
                android:id="@+id/sort_score_up"
                android:icon="@drawable/sort_ascending"
                android:title="@string/sort_by_score" />
            <item
                android:id="@+id/sort_score_down"
                android:icon="@drawable/sort_descending"
                android:title="@string/sort_by_score" />
        </menu>
    </item>
</menu>