<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    android:paddingBottom="2.5dp"
    android:paddingLeft="@dimen/row_padding_vertical"
    android:paddingRight="@dimen/row_padding_vertical"
    android:paddingTop="2.5dp"
    android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/position_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"/>

            <ImageView
                android:id="@+id/rank_img"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/star_circle_outline_gold"
                android:contentDescription="@string/rank_image" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_player_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/player"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/name_player"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/unknown"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_player_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/team"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/team_player"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/unknown"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/country_flag"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:contentDescription="@string/country_flag" />
        </LinearLayout>

</LinearLayout>