<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    card_view:cardBackgroundColor="@android:color/white"
    card_view:cardCornerRadius="3dp"
    card_view:contentPadding="5dp"
    card_view:contentPaddingRight="16dp"
    card_view:contentPaddingLeft="16dp"
    card_view:contentPaddingBottom="16dp"
    card_view:contentPaddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:contentDescription="@string/logo_player_desc" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/name_found_player_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/player"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/name_found_player"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:lines="2"
                    android:text="@string/unknown"
                    android:textAllCaps="true"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/block_last_match_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="invisible"
                android:gravity="center">

                <TextView
                    android:id="@+id/last_match_time_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/last_match_time_title"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/last_match_found_player"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="2"
                    android:text="@string/unknown"
                    android:textAllCaps="true"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>