<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/row_padding_vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/row_padding_vertical">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="3dp"
        card_view:contentPadding="5dp"
        android:layout_margin="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:id="@+id/imageView"
                android:contentDescription="@string/logo_player_desc" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingStart="15dp">
                <TextView
                    android:id="@+id/name_pro_player_title"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/player"
                    android:textSize="12sp"
                    />

                <TextView
                    android:id="@+id/name_pro_player"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/unknown"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:lines="2"
                    android:gravity="center|start"
                    />
            </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/team_name_pro_player_title"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center"
                android:text="@string/team"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/team_name_pro_player"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center"
                android:text="@string/unknown"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:lines="2"/>

        </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>