<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="7dp"
    android:layout_marginRight="7dp"
    android:layout_marginTop="4dp"
    card_view:cardCornerRadius="3dp"
    card_view:contentPadding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/player_img"
            android:layout_width="80dp"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_title"
                style="@style/TextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_title" />

            <TextView
                android:id="@+id/name_player"
                style="@style/TextViewValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/all_matches_title"
                style="@style/TextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/games_title" />

            <TextView
                android:id="@+id/all_matches_played"
                style="@style/TextViewValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/matches_win_title"
                style="@style/TextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wins_title" />

            <TextView
                android:id="@+id/matches_win"
                style="@style/TextViewValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/is_current_team_member_title"
                style="@style/TextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/in_team" />

            <TextView
                android:id="@+id/is_current_team_member"
                style="@style/TextViewValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>